[package]
name = "cond"
version = "0.1.0"
authors = ["Steve Flanagan <stevemflanagan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="cond"
path="src/cond.rs"

[[bin]]
name="parls"
path="src/parls.rs"

[dependencies]
structopt = {version = "0.3.1", feature=["color","termsize","wrap_help"]}
num_cpus = "1.0"
lazy_static = "1.4.0"
anyhow = "1.0.18"

