[package]
name = "cond"
version = "0.1.0"
authors = ["Steve Flanagan <stevemflanagan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="cond"
path="src/cond.rs"

[[bin]]
name="parls"
path="src/parls.rs"

[[bin]]
name="quicky"
path="src/quicky.rs"


[target.'cfg(unix)'.dependencies]
users = "0.10.0"
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi"] }


[dependencies]
structopt = {version = "0.3.1", feature=["color","termsize","wrap_help"]}
num_cpus = "1.13.0"
lazy_static = "1.4.0"
anyhow = "1.0.31"
csv = "1.1.3"
cpu-time = "1.0.0"
num-format = "0.4.0"
regex = "1.3.9"

